--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "mosaic-react",
   "version": "0.1.0",
+  "homepage": "https://alexasole.github.io/react-gh-pages",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
